Updated at hyperdev.com

--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -1,7 +1,7 @@
 +nav("Project name", "dropdown_menu")
             +nav_item( "/", "active" ) Home
-            +nav_item( "buttons" ) Buttons & Alerts
-            +nav_item( "lists" ) Lists
+            +nav_item( "buttonsex" ) Buttons & Alerts
+            +nav_item( "listsex" ) Lists
             +nav_item_dropdown( "#" )( label="Dropdown")
                 +nav_item( "#" ) Action
                 +nav_item( "#" ) Another action
